# rlean

./: .gitignore  AlgorithmImports.pyi  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LEAN_API_GAPS.md  LEAN_API_INVENTORY.md  LICENSE  README.md  rlean
.cargo/: config.toml
crates/lean-algorithm/: Cargo.toml
crates/lean-algorithm/src/: algorithm.rs  benchmark.rs  history.rs  lib.rs  logging.rs  notification.rs  portfolio.rs  qc_algorithm.rs  runtime_statistics.rs  securities.rs
crates/lean-algorithm/tests/: option_cashflow_tests.rs  option_portfolio_model_tests.rs  portfolio_tests.rs  subscription_tests.rs
crates/lean-alpha/: Cargo.toml
crates/lean-alpha/src/: alpha_model.rs  insight.rs  insight_collection.rs  lib.rs
crates/lean-alpha/src/models/: ema_cross.rs  historical_returns.rs  macd_alpha.rs  mod.rs  momentum_alpha.rs  pairs_alpha.rs  pearson_pairs.rs  rsi_alpha.rs
crates/lean-alpha/tests/: alpha_tests.rs  historical_returns_tests.rs
crates/lean-brokerages/: Cargo.toml
crates/lean-brokerages/src/: alpaca.rs  binance_brokerage.rs  brokerage.rs  brokerage_model.rs  coinbase.rs  fidelity.rs  fxcm_brokerage.rs  interactive_brokers.rs  lib.rs  oanda_brokerage.rs  paper_brokerage.rs  robinhood.rs
crates/lean-consolidators/: Cargo.toml
crates/lean-consolidators/src/: calendar_consolidator.rs  consolidator.rs  heikin_ashi_consolidator.rs  lib.rs  range_bar_consolidator.rs  renko_consolidator.rs  tick_consolidator.rs  trade_bar_consolidator.rs  volume_consolidator.rs
crates/lean-consolidators/tests/: consolidator_tests.rs
crates/lean-core/: Cargo.toml
crates/lean-core/src/: currency.rs  data_normalization.rs  decimal_ext.rs  error.rs  exchange_hours.rs  lib.rs  market.rs  option_right.rs  option_style.rs  options.rs  period.rs  resolution.rs  security_type.rs  symbol.rs  tick_type.rs  time.rs
crates/lean-core/tests/: resolution_tests.rs  symbol_tests.rs  time_tests.rs
crates/lean-data/: Cargo.toml
crates/lean-data-providers/: Cargo.toml
crates/lean-data-providers/src/: config.rs  custom_data.rs  lib.rs  local.rs  request.rs  stacked.rs  tests.rs  thetadata_client.rs  traits.rs
crates/lean-data/src/: auxiliary_data.rs  base_data.rs  custom.rs  data_queue.rs  delisting.rs  dividend.rs  fundamental.rs  history_provider.rs  lib.rs  open_interest.rs  quote_bar.rs  slice.rs  split.rs  subscription.rs  symbol_changed.rs  tick.rs  trade_bar.rs
crates/lean-data/tests/: slice_tests.rs  tick_tests.rs  trade_bar_tests.rs
crates/lean-engine/: Cargo.toml
crates/lean-engine/src/: algorithm_manager.rs  backtest_engine.rs  data_manager.rs  engine_config.rs  lib.rs  result_handler.rs
crates/lean-execution/: Cargo.toml
crates/lean-execution/src/: execution_model.rs  lib.rs
crates/lean-execution/tests/: execution_tests.rs
crates/lean-indicators/: Cargo.toml
crates/lean-indicators/src/: accumulation_distribution.rs  adx.rs  alma.rs  aroon.rs  atr.rs  average_range.rs  awesome_oscillator.rs  balance_of_power.rs  bb.rs  cci.rs  chaikin_money_flow.rs  chaikin_oscillator.rs  cmo.rs  connors_rsi.rs  correlation.rs  covariance.rs  dema.rs  demarker.rs  donchian.rs  dpo.rs  ease_of_movement.rs  ema.rs  fisher_transform.rs  force_index.rs  heikin_ashi.rs  hma.rs  hurst_exponent.rs  ichimoku.rs  indicator.rs  kama.rs  keltner.rs  kst.rs  lib.rs  log_return.rs  lsma.rs  macd.rs  mass_index.rs  maximum.rs  mcginley.rs  mfi.rs  (+35 more)
crates/lean-indicators/tests/: atr_tests.rs  bb_tests.rs  ema_tests.rs  indicator_tests.rs  macd_tests.rs  rsi_tests.rs  sma_tests.rs
crates/lean-live/: Cargo.toml
crates/lean-live/src/: account_sync.rs  lib.rs  live_data_feed.rs  live_engine.rs  polling_data_feed.rs  reconnect.rs
crates/lean-optimization/: Cargo.toml
crates/lean-optimization/src/: lib.rs  objective.rs  optimization_report.rs  parameter.rs
crates/lean-optimization/tests/: optimization_tests.rs
crates/lean-options/: Cargo.toml
crates/lean-options/src/: assignment_model.rs  chain.rs  contract.rs  exercise_model.rs  filter_universe.rs  lib.rs  margin_model.rs  payoff.rs  price_model.rs
crates/lean-orders/: Cargo.toml
crates/lean-orders/src/: combo_orders.rs  fee_model.rs  fill_model.rs  lib.rs  limit_if_touched_order.rs  option_exercise_order.rs  order.rs  order_event.rs  order_processor.rs  order_ticket.rs  security_transaction_model.rs  slippage.rs  trailing_stop_order.rs  transaction_manager.rs
crates/lean-orders/tests/: fee_model_tests.rs  fill_model_tests.rs  order_tests.rs
crates/lean-portfolio-construction/: Cargo.toml
crates/lean-portfolio-construction/src/: lib.rs  portfolio_construction_model.rs  portfolio_target.rs
crates/lean-portfolio-construction/tests/: black_litterman_tests.rs  pcm_tests.rs  risk_parity_tests.rs
crates/lean-python/: Cargo.toml
crates/lean-python/src/: charting.rs  lib.rs  py_adapter.rs  py_charting.rs  py_data.rs  py_framework.rs  py_indicators.rs  py_options.rs  py_orders.rs  py_portfolio.rs  py_qc_algorithm.rs  py_quant_book.rs  py_types.rs  py_universe.rs  report.rs  runner.rs
crates/lean-risk/: Cargo.toml
crates/lean-risk/src/: lib.rs  margin.rs  max_drawdown.rs  max_drawdown_portfolio.rs  max_unrealized_profit.rs  risk_management.rs  sector_exposure.rs  trailing_stop.rs
crates/lean-risk/tests/: risk_models_tests.rs
crates/lean-statistics/: Cargo.toml
crates/lean-statistics/src/: lib.rs  portfolio_statistics.rs  statistics.rs  trade_statistics.rs
crates/lean-statistics/tests/: statistics_tests.rs
crates/lean-storage/: Cargo.toml
crates/lean-storage/src/: cache.rs  convert.rs  lean_csv_reader.rs  lib.rs  path_resolver.rs  predicate.rs  reader.rs  schema.rs  writer.rs
crates/lean-storage/tests/: factor_map_file_tests.rs  option_storage_tests.rs  partition_storage_tests.rs
crates/rlean/: Cargo.toml
crates/rlean/src/: config.rs  config_cmd.rs  init.rs  main.rs  plugin_cmd.rs  project.rs  providers.rs  registry_cmd.rs  research.rs  research_daemon.rs  stubs_cmd.rs  vcs_cmd.rs
examples-crate/: Cargo.toml
examples-crate/src/: parquet_migration.rs  python_runner.rs  sma_crossover.rs
(+93 files in other folders)
