[workspace]
members = [
    "crates/lean-core",
    "crates/lean-data",
    "crates/lean-storage",
    "crates/lean-engine",
    "crates/lean-algorithm",
    "crates/lean-indicators",
    "crates/lean-brokerages",
    "crates/lean-orders",
    "crates/lean-risk",
    "crates/lean-portfolio-construction",
    "crates/lean-universe",
    "crates/lean-consolidators",
    "crates/lean-alpha",
    "crates/lean-scheduling",
    "crates/lean-statistics",
    "crates/lean-python",
    "crates/lean-data-providers",
    "crates/lean-options",
    "crates/lean-execution",
    "crates/lean-optimization",
    "crates/lean-live",
    "crates/lean-forex",
    "crates/lean-crypto",
    "crates/lean-futures",
    "examples-crate",
    "crates/lean-plugin",
    "crates/rlean",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cascade Labs"]
license = "Apache-2.0"

[workspace.dependencies]
# Arrow / Parquet
arrow = { version = "53", features = ["prettyprint"] }
arrow-array = "53"
arrow-schema = "53"
arrow-cast = "53"
parquet = { version = "53", features = ["async"] }
datafusion = "43"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Collections / concurrency
dashmap = "6"
rayon = "1.10"
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Math / numerics
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
ordered-float = { version = "4", features = ["serde"] }
statrs = "0.17"

# Error handling
thiserror = "1"
anyhow = "1"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
smallvec = { version = "1", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
bitflags = "2"
bytes = "1"
num-traits = "0.2"
num-derive = "0.4"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
itertools = "0.13"
num_cpus = "1"
glob = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
tempfile = "3"
pyo3 = { version = "0.23", features = ["auto-initialize", "chrono"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
clap = { version = "4", features = ["derive", "env"] }
libloading = "0.8"
lean-plugin            = { path = "crates/lean-plugin" }

[patch."ssh://git@github.com/cascade-labs/rlean"]
lean-core           = { path = "crates/lean-core" }
lean-data           = { path = "crates/lean-data" }
lean-storage        = { path = "crates/lean-storage" }
lean-data-providers = { path = "crates/lean-data-providers" }
lean-plugin         = { path = "crates/lean-plugin" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
