[package]
name = "lean-brokerages"
version.workspace = true
edition.workspace = true

[dependencies]
lean-core = { path = "../lean-core" }
lean-data = { path = "../lean-data" }
lean-orders = { path = "../lean-orders" }
lean-algorithm = { path = "../lean-algorithm" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
