[package]
name = "lean-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
ordered-float = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
smallvec = { workspace = true }
bitflags = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
parking_lot = { workspace = true }
