[package]
name = "lean-data"
version.workspace = true
edition.workspace = true

[dependencies]
lean-core = { path = "../lean-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
ordered-float = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
smallvec = { workspace = true }
bitflags = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
