[package]
name = "lean-execution"
version.workspace = true
edition.workspace = true

[dependencies]
lean-core    = { path = "../lean-core" }
lean-orders  = { path = "../lean-orders" }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde        = { workspace = true }
tracing      = { workspace = true }
