[package]
name = "lean-indicators"
version.workspace = true
edition.workspace = true

[dependencies]
lean-core = { path = "../lean-core" }
lean-data = { path = "../lean-data" }
serde = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
