[package]
name = "lean-live"
version.workspace = true
edition.workspace = true

[dependencies]
lean-core     = { path = "../lean-core" }
lean-data     = { path = "../lean-data" }
lean-orders   = { path = "../lean-orders" }
lean-algorithm = { path = "../lean-algorithm" }
lean-brokerages = { path = "../lean-brokerages" }
rust_decimal  = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono        = { workspace = true }
serde         = { workspace = true }
tracing       = { workspace = true }
tokio         = { workspace = true }
anyhow        = { workspace = true }
