[package]
name = "lean-optimization"
version.workspace = true
edition.workspace = true

[dependencies]
lean-core       = { path = "../lean-core" }
lean-statistics = { path = "../lean-statistics" }
rust_decimal    = { workspace = true }
rust_decimal_macros = { workspace = true }
serde           = { workspace = true }
tracing         = { workspace = true }
chrono          = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
