[package]
name = "lean-orders"
version.workspace = true
edition.workspace = true

[dependencies]
lean-core = { path = "../lean-core" }
lean-data = { path = "../lean-data" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
