[package]
name = "lean-storage"
version.workspace = true
edition.workspace = true

[dependencies]
lean-core = { path = "../lean-core" }
lean-data = { path = "../lean-data" }

arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-cast = { workspace = true }
parquet = { workspace = true }
datafusion = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
glob = { workspace = true }
dashmap = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
